--- a/Front_End/pages/purchase-order.html
+++ b/Front_End/pages/purchase-order.html
@@ -22,8 +22,9 @@
     <ul class="list-group list-group-horizontal text-danger justify-content-end font-weight-bold">
         <li class="list-group-item bg-white" id="lnkHome"><a href="../index.html">Home</a></li>
         <li class="list-group-item bg-white" id="lnkCustomer"><a href="customer.html">Customer</a></li>
-        <li class="list-group-item bg-white" id="lnkItem"><a  href="item.html">Item</a></li>
-        <li class="list-group-item bg-danger text-white" id="lnkOrders"><a class="text-white" href="purchase-order.jsp">Orders</a></li>
+        <li class="list-group-item bg-white" id="lnkItem"><a href="item.html">Item</a></li>
+        <li class="list-group-item bg-danger text-white" id="lnkOrders"><a class="text-white" href="purchase-order.jsp">Orders</a>
+        </li>
     </ul>
 </header>
 
@@ -59,8 +60,7 @@
                                         <div class="form-group">
                                             <label>Customer :</label>
                                             <select class="form-control" id="selectCusID">
-                                                <option value="1">A</option>
-                                                <option value="2">B</option>
+                                                <option>Select</option>
                                             </select>
                                             <span class="control-error"
                                                   id="cus-empty-error"></span>
@@ -106,7 +106,9 @@
                                     <div class="col-6">
                                         <div class="form-group">
                                             <label>Item :</label>
-                                            <select class="form-control" id="selectItemCode"></select>
+                                            <select class="form-control" id="selectItemCode">
+                                                <option>Select</option>
+                                            </select>
                                             <span class="control-error"
                                                   id="item-empty-error"></span>
                                         </div>
@@ -114,25 +116,25 @@
                                     <div class="col-6">
                                         <div class="form-group">
                                             <label>Item Code :</label>
-                                            <input class="form-control" id="txtItemCode" type="text">
+                                            <input class="form-control" id="orderItemCode" type="text">
                                         </div>
                                     </div>
                                     <div class="col-5">
                                         <div class="form-group">
                                             <label>Item Name :</label>
-                                            <input class="form-control" id="txtItemDescription" type="text">
+                                            <input class="form-control" id="orderItemDescription" type="text">
                                         </div>
                                     </div>
                                     <div class="col-4">
                                         <div class="form-group">
                                             <label class="">Price :</label>
-                                            <input class="form-control" id="txtItemPrice" type="text">
+                                            <input class="form-control" id="orderItemPrice" type="text">
                                         </div>
                                     </div>
                                     <div class="col-3">
                                         <div class="form-group">
                                             <label class="">QtyOnH :</label>
-                                            <input class="form-control" id="txtQTYOnHand" type="text">
+                                            <input class="form-control" id="orderQTYOnHand" type="text">
                                         </div>
                                     </div>
                                     <hr>
@@ -218,7 +220,7 @@
                         <th>Total</th>
                     </tr>
                     </thead>
-                    <tbody class="bg-light text-dark" id="orderTable">
+                    <tbody id="orderTable">
 
                     </tbody>
                 </table>
@@ -230,6 +232,250 @@
 
 
 <script src="../assets/js/jquery-3.7.0.min.js"></script>
+
+
+<script>
+    var genarateOrderId = 0;
+    const BaseURL="http://localhost:8080/jsonp/pages/";
+
+    $("#txtOrderID").val('0-00' + (genarateOrderId += 1));
+
+    function loadCustomerIds() {
+        $("#selectCusID").empty();
+        $("#selectCusID").append($("<option></option>").attr("value", 0).text("Select ID"));
+
+        var countCustomerId = 1;
+
+        $.ajax({
+            url: BaseURL+"customer?option=GetAll",
+            method: "GET",
+            success: function (resp) {
+                for (let ids of resp) {
+                    $("#selectCusID").append($("<option></option>").attr("value", countCustomerId).text(ids.id));
+                    countCustomerId++;
+                    console.log(countCustomerId);
+                }
+
+                // Bind the event after options are loaded
+                $("#selectCusID").click(function () {
+                    loardCustomer();
+                });
+            },
+            error: function (ob, statusText, error) {
+            }
+        });
+    }
+
+    function loardCustomer() {
+        $.ajax({
+            url:BaseURL+ "customer?option=search&cusID=" + $("#selectCusID option:selected").text(),
+            method: "GET",
+            success: function (response) {
+                $("#orderCustomerID").val(response.id);
+                $("#orderCustomerName").val(response.name);
+                $("#orderCustomerSalary").val(response.contact);
+                $("#orderCustomerAddress").val(response.address);
+            },
+            error: function (ob, statusText, error) {
+            }
+        });
+    }
+
+    // Call the function to start loading customer IDs
+    loadCustomerIds();
+
+
+    function loardItemIds() {
+        $("#selectItemCode").empty();
+        $("#selectItemCode").append($("<option></option>").attr("value", 0).text("Select ID"));
+
+        var countItemId = 1;
+
+        $.ajax({
+            url: BaseURL+"item?option=getAll",
+            method: "GET",
+            success: function (resp) {
+                for (let code of resp) {
+                    $("#selectItemCode").append($("<option></option>").attr("value", countItemId).text(code.code));
+                    countItemId++;
+                    console.log(countItemId);
+                }
+                // Bind the event after options are loaded
+                $("#selectItemCode").click(function () {
+                    loardItems();
+
+                });
+            },
+            error: function (ob, statusText, error) {
+            }
+        });
+
+    }
+
+    function loardItems() {
+        $.ajax({
+            url: BaseURL+"item?option=search&code=" + $("#selectItemCode option:selected").text(),
+            method: "GET",
+            success: function (resp) {
+                $("#orderItemCode").val(resp.code);
+                $("#orderItemDescription").val(resp.description);
+                $("#orderItemPrice").val(resp.unitPrice);
+                $("#orderQTYOnHand").val(resp.qty);
+
+                // console.log(resp);
+
+
+            },
+            error: function (ob, statusText, error) {
+            }
+        });
+    }
+
+    loardItemIds();
+
+
+    $("#btnAddToTable").click(function () {
+        let itemCode = $("#orderItemCode").val();
+        let itemDescription = $("#orderItemDescription").val();
+        let itemPrice = $("#orderItemPrice").val();
+        let itemQty = $("#txtQty").val();
+
+        let cartItemsRow=[];
+
+        let total = itemPrice * itemQty;
+
+        cartItemsRow.push(itemCode,itemDescription,itemPrice,itemQty,total);
+
+        let text = "add to cart this item";
+
+        if (confirm(text) == true) {
+            let row = `<tr>
+                <td>${itemCode}</td>
+                <td>${itemDescription}</td>
+                <td>${itemPrice}</td>
+                <td>${itemQty}</td>
+                <td>${total}</td>
+            </tr>`;
+
+            $("#orderTable").append(row);
+        }
+
+        orderDetails.push(cartItemsRow);
+
+        calculateTotal();
+
+
+        $("#orderItemCode").val("");
+        $("#orderItemDescription").val("");
+        $("#orderItemPrice").val("");
+        $("#orderQTYOnHand").val("");
+        $("#txtQty").val("");
+
+        $("#orderCustomerID").focus();
+
+        $("#orderCustomerID").val("");
+        $("#orderCustomerName").val("");
+        $("#orderCustomerSalary").val("");
+        $("#orderCustomerAddress").val("");
+
+
+        $("#orderItemCode").focus();
+
+        updateQtyOnHandRow(itemCode, itemQty);
+
+    });
+
+
+    function updateQtyOnHandRow(code, sellQty) {
+        $.ajax({
+            url: BaseURL+"item?option=search&code=" + code,
+            method: "GET",
+            success: function (resp) {
+                $("#orderQTYOnHand").val(resp.qty - sellQty);
+                for (let code of resp) {
+
+                    //$("#orderQTYOnHand").val(code.qty);
+                }
+            },
+            error: function (ob, statusText, error) {
+            }
+        });
+    }
+
+    function calculateTotal() {
+        let total = 0;
+        $("#orderTable tr td:nth-child(5)").each(function () {
+            total += parseFloat($(this).text());
+        });
+        $("#total").text(total);
+        $("#subtotal").text(total);
+
+        $("#txtCash").on('keyup', function () {
+            var cash = $("#txtCash").val();
+            var total = $("#total").text();
+            var discount = $("#txtDiscount").val();
+            var balance = cash - (total - discount);
+            $("#txtBalance").val(balance);
+        });
+
+        $("#txtDiscount").on('keyup', function () {
+            var cash = $("#txtCash").val();
+            var total = $("#total").text();
+            var discount = $("#txtDiscount").val();
+            var balance = cash - (total - discount);
+            $("#txtBalance").val(balance);
+
+            $("#subtotal").text(total - discount);
+        });
+    }
+
+    let orderDetails;
+
+    $("#btnSubmitOrder").click(function (){
+
+        let orderId = $("#txtOrderID").val();
+        let orderDate = $("#txtDate").val();
+        let itemId = $("#orderItemCode").val();
+        let customerId = $("#orderCustomerID").val();
+        let qty = $("#txtQty").val();
+        let unitPrice = $("#orderItemPrice").val();
+        let cartItems = orderDetails;
+
+        let order = {
+            "orderId": orderId,
+            "orderDate": orderDate,
+            "itemCode": itemId,
+            "customerId": customerId,
+            "qty": qty,
+            "unitPrice": unitPrice,
+            "cartItems": cartItems
+        }
+
+
+        $.ajax({
+            url: BaseURL+"placeOrder",
+            method: "POST",
+            contentType: "application/json",
+            setRequestHeader:"Access-Control-Allow-Origin",
+            data: JSON.stringify(order),
+            success: function (resp) {
+                updateQtyOnHandRow();
+                if (resp) {
+                    alert("Order has been saved successfully");
+                } else {
+                    alert("Failed to save the order");
+                }
+            },
+            error: function (ob, statusText, error) {
+                alert(error);
+            }
+        });
+
+    });
+
+
+
+</script>
 
 </body>
 </html>
